# repox

./: .gitignore  Cargo.toml  README.md  dev
.github/: README.md
backend/: Cargo.toml
backend/src/: frontend.rs  main.rs
frontend/: package-lock.json
resources/assets/: repox.yaml
resources/frontend/public/: index.html
resources/frontend/src/: App.js
src/: access_token.rs  api.rs  assets.rs  configuration.rs  frontend.rs  log.rs  main.rs  server.rs  user.rs
